[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xrpl-swap"
version = "0.1.0"
description = "Backend API for XRPL Swap"
authors = ["wonj1012 <choi@wonj.me>"]
maintainers = ["wonj1012 <choi@wonj.me>"]
readme = "README.md"
license = "CC BY-NC-ND 4.0"
homepage = "https://xrplswap.xyz"
repository = "https://github.com/Helix-Organization/xrpl-swap"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["all"], version = "^0.23.2"}
xrpl-py = "^2.3.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
pydantic = "^2.3.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
pylint = "^2.17.5"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[tool.pylint.master]
max-line-length = 110

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "C0114",
    "E0213",
    "R0903",
]

[tool.black]
line-length = 110
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
